--- a/config/database.yml
+++ b/config/database.yml
@@ -49,7 +49,10 @@ test:
 #
 production:
   <<: *default
-  database: library_management_system_production
+  adapter: mysql2
+  encoding: utf8
+  reconnect: false
+  pool: 5
   database: <%=ENV['OPENSHIFT_APP_NAME']%>
   username: <%=ENV['OPENSHIFT_MYSQL_DB_USERNAME']%>
   password: <%=ENV['OPENSHIFT_MYSQL_DB_PASSWORD']%>
