--- a/test/fixtures/books.yml
+++ b/test/fixtures/books.yml
@@ -1,17 +1,18 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  isbn: MyString
-  title: MyString
-  author: MyString
-  description: MyString
-  status: false
-  taken_by: MyString
+  isbn: 2227776655432
+  title: 
+  author: Mrs
+  description: MyStringqgfogfqjgb
+  status: 1
+  taken_by: user1
 
 two:
-  isbn: MyString
-  title: MyString
-  author: MyString
-  description: MyString
-  status: false
-  taken_by: MyString
+  isbn: 222777665
+  title: 
+  author: Mrs
+  description: MyStringqgfogfqjgb
+  status: 1
+  taken_by: user1
+
